Manager Registration Api done